--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
+DB_USER=nodeuser
+DB_PASSWORD=nodepassword
 DB_NAME=patient_registration
 JWT_SECRET=mysecret
 JWT_EXPIRES_IN=86400
