resolve .env file error

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
-DB_USER=nodeuser
-DB_PASSWORD=nodepassword
-DB_NAME=patient_registration
-JWT_SECRET=mysecret
-JWT_EXPIRES_IN=86400
+PORT="5001"
+DB_HOST="localhost"
+DB_USER="root"
+DB_PASSWORD="root"
+DB_NAME="patient_registration"
+JWT_SECRET="mysecret"
+JWT_EXPIRES_IN="86400"
