--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER="root"
 DB_PASSWORD="root"
 DB_NAME="patient_registration"
 JWT_SECRET="mysecret"
-JWT_EXPIRES_IN=86400
+JWT_EXPIRES_IN="2592000"
